Avoid using the URL constructor as it is deprecated